box button added with styling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       </div>
     </div>
     <div class="container">
+      <div class="top-button">
+        <a href="box.html"><button class="box-btn">Box</button></a>
+      </div>
       <div class="buttons">
         <button onclick="addToSidebar('Shower', 10)">Shower - $10</button>
         <button onclick="addToSidebar('Hair', 20)">Hair - $20</button>
