--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <a href="box.html"><button class="box-btn">Box</button></a>
       </div>
       <div class="buttons">
-        <button onclick="addToSidebar('Shower', 10)">Shower - $10</button>
-        <button onclick="addToSidebar('Hair', 20)">Hair - $20</button>
-        <button onclick="addToSidebar('Beard', 40)">Beard - $40</button>
+        <button onclick="addToSidebar('Shower', 10)">Shower</button>
+        <button onclick="addToSidebar('Hair', 20)">Hair</button>
+        <button onclick="addToSidebar('Beard', 40)">Beard</button>
       </div>
     </div>
     <script src="script.js"></script>
