contact button and page done styling

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
       </div>
     </div>
     <div class="container">
-      <div class="top-button">
+      <div class="top-buttons">
         <a href="box.html"><button class="box-btn">Box</button></a>
+        <a href="contacts.html"
+          ><button class="contacts-btn">Contacts</button></a
+        >
       </div>
       <div class="buttons">
         <button onclick="addToSidebar('Shower', 10)">Shower</button>
